fix section.galleries padding (wrapping related into a new line)

--- a/assets/css/albums.scss
+++ b/assets/css/albums.scss
@@ -50,13 +50,14 @@ section.galleries {
 
 //   FIX related articles wrapping when the page had the handwritten font
 // .handwritten-font section.galleries{
-// 	// Original values
-// 	// gap:1em;
-// 	// padding-right: 1.5rem;
-// 	// padding-left: 1.5rem;
-// 	padding-right: 1.2rem;
-// 	padding-left: 1.2rem;
-// }
+section.galleries{
+	// Original values
+	// gap:1em;
+	// padding-right: 1.5rem;
+	// padding-left: 1.5rem;
+	padding-right: 1.2rem;
+	padding-left: 1.2rem;
+}
 
 article.articles-content section.galleries a.card h2{
 	font-size: 1.125rem !important;
